--- a/main.html
+++ b/main.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 	<head>
-		<title>JS_17</title>
+		<title>Магазинчик</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -16,7 +16,7 @@
 		<div class="tabs">
 			<button class="tab"
 					data-tab-id="goods">
-				Товары
+				Товарчики
 			</button>
 
 			<span class="separator">/</span>
@@ -24,7 +24,7 @@
 			<button class="tab cart-tab"
 					data-goods-count="0"
 					data-tab-id="cart">
-				Корзина
+				Корзиночка
 			</button>
 		</div>
 
