--- a/main.html
+++ b/main.html
@@ -1,37 +1,29 @@
 <!DOCTYPE html>
 <html lang="ru">
-	<head>
-		<title>Магазинчик</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
+<head>
+	<title>Магазинчик</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<link rel="stylesheet" type="text/css" href="style.css" />
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
+</head>
+<body>
+<!--шапка сайта-->
 
-		<link rel="stylesheet" type="text/css" href="style.css" />
+<!--табы-->
+<div class="tabs">
+	<button class="tab" data-tab-id="goods">
+		Товарчики
+	</button>
+	<span class="separator">/</span>
+	<button class="tab cart-tab" data-goods-count="0" data-tab-id="cart">
+		Корзиночка
+	</button>
+</div>
+<!--подвал сайта-->
 
-		<link
-			rel="stylesheet"
-			type="text/css"
-			href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
-	</head>
-	<body>
-		<div class="tabs">
-			<button class="tab"
-					data-tab-id="goods">
-				Товарчики
-			</button>
-
-			<span class="separator">/</span>
-
-			<button class="tab cart-tab"
-					data-goods-count="0"
-					data-tab-id="cart">
-				Корзиночка
-			</button>
-		</div>
-
-		<script src="goods.js">
-		</script>
-
-		<script src="index.js">
-		</script>
-	</body>
+<!--скрипты-->
+	<script src="goods.js"></script>
+	<script src="index.js"></script>
+</body>
 </html>
