--- a/main.html
+++ b/main.html
@@ -9,7 +9,9 @@
 </head>
 <body>
 <!--шапка сайта-->
-
+<div class="shapka">
+<h1>КУПИ МЕМАС</h1>
+</div>
 <!--табы-->
 <div class="tabs">
 	<button class="tab" data-tab-id="goods">
@@ -21,9 +23,12 @@
 	</button>
 </div>
 <!--подвал сайта-->
-
+<div class="podval">
+	<h4>ну купи, пожалуйста</h4>
+</div>
 <!--скрипты-->
 	<script src="goods.js"></script>
 	<script src="index.js"></script>
 </body>
 </html>
+
