--- a/main.html
+++ b/main.html
@@ -11,24 +11,26 @@
 <!--шапка сайта-->
 <div class="shapka">
 <h1>КУПИ МЕМАС</h1>
+<button class="btn-toggle">день/ночь</button>
 </div>
 <!--табы-->
 <div class="tabs">
+	<span class="separator">|</span>
 	<button class="tab" data-tab-id="goods">
 		Товарчики
 	</button>
-	<span class="separator">/</span>
+	<span class="separator">|</span>
 	<button class="tab cart-tab" data-goods-count="0" data-tab-id="cart">
 		Корзиночка
 	</button>
+	<span class="separator">|</span>
 </div>
 <!--подвал сайта-->
 <div class="podval">
 	<h4>ну купи, пожалуйста</h4>
 </div>
 <!--скрипты-->
-	<script src="goods.js"></script>
 	<script src="index.js"></script>
+	<script src="goods.js"></script>
 </body>
 </html>
-
