добавил вторую кнопку товара

--- a/main.html
+++ b/main.html
@@ -20,6 +20,10 @@
 		Товарчики
 	</button>
 	<span class="separator">|</span>
+	<button class="tab" data-tab-id="goods_2"><!--добавляем кнопку-->
+		Еще Товарчики
+	</button>
+	<span class="separator">|</span>
 	<button class="tab cart-tab" data-goods-count="0" data-tab-id="cart">
 		Корзиночка
 	</button>
@@ -32,5 +36,6 @@
 <!--скрипты-->
 	<script src="index.js"></script>
 	<script src="goods.js"></script>
+	<script src="goods_2.js"></script>
 </body>
 </html>
