--- a/main.html
+++ b/main.html
@@ -6,12 +6,17 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="stylesheet" type="text/css" href="style.css" />
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
 <!--шапка сайта-->
 <div class="shapka">
 <h1>КУПИ МЕМАС</h1>
-<button class="btn-toggle">день/ночь</button>
+<span class="btn-toggle">
+	<span class="material-symbols-outlined">
+		light_mode
+	</span>
+</span>
 </div>
 <!--табы-->
 <div class="tabs">
