--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 			<span class="separator">|</span>
 <button class="tab" data-tab-id="goods_2">Еще Товарчики</button><!--добавляем кнопку-->
 			<span class="separator">|</span>
+<button class="tab" data-tab-id="goods_3">И Еще Немножко</button><!--добавляем кнопку-->
+			<span class="separator">|</span>
 <button class="tab cart-tab" data-goods-count="0" data-tab-id="cart">Корзиночка</button>
 			<span class="separator">|</span>
 		</div>
