исправил чето-там

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-	<title>Магазинчик</title>
+	<title>Магазинчик 0.1</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="stylesheet" type="text/css" href="style.css" />
@@ -42,3 +42,4 @@
 	<script src="goods_3.js"></script>
 </body>
 </html>
+
