--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 	<link rel="stylesheet" type="text/css" href="style.css" />
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+	<script defer src="index.js"></script>
+	<script defer src="goods.js"></script>
+	<script defer src="goods_2.js"></script>
+	<script defer src="goods_3.js"></script>
 </head>
 <body>
 <div class="wrapper">
@@ -35,11 +39,6 @@
 		<h4>ну купи, пожалуйста</h4>
 	</div>
 </div>
-<!-- СКРИПТЫ (подгружаем в конце, чтобы не тормозить ими загрузку страницы) -->
-	<script src="index.js"></script>
-	<script src="goods.js"></script>
-	<script src="goods_2.js"></script>
-	<script src="goods_3.js"></script>
 </body>
 </html>
 
